# coding-agent

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  Makefile  README.md  pyproject.toml
docs/analysis/codex/: CODEX-RS_CORE_OVERVIEW.md  CODEX-RS_CORE_SRC_TOOLS_HANDLERS_OVERVIEW.md  CODEX-RS_CORE_SRC_TOOLS_OVERVIEW.md  CODEX-RS_OVERVIEW.md  CODEX_CODEBASE_OVERVIEW.md  COMPLETE_DETAILED_CODEX_SPECIFICATION.md
docs/analysis/codex/handlers/: apply_patch_DETAILED_SPECIFICATION.md  grep_files_DETAILED_SPECIFICATION.md  list_dir_DETAILED_SPECIFICATION.md  mcp_DETAILED_SPECIFICATION.md  mcp_resource_DETAILED_SPECIFICATION.md  plan_DETAILED_SPECIFICATION.md  read_file_DETAILED_SPECIFICATION.md  shell_DETAILED_SPECIFICATION.md  test_sync_DETAILED_SPECIFICATION.md  unified_exec_DETAILED_SPECIFICATION.md  view_image_DETAILED_SPECIFICATION.md
docs/mvp_00/: 00_PLAN.md  00_SPECIFICATION.md  01_PLAN.md  02_EPIC_01.md  03_EPIC_02.md  04_EPIC_03.md  05.01_CHECKPOINT_00.md  05_EPIC_04.md  06_EPIC_05.md  07_EPIC_06.md
src/lincona/: __init__.py  auth.py  cli.py  config.py  logging.py  paths.py  repl.py  sessions.py  shutdown.py
src/lincona/openai_client/: __init__.py  client.py  parsing.py  transport.py  types.py
src/lincona/tools/: AGENTS.md  README.md  __init__.py  apply_patch.py  approval.py  base.py  exec_pty.py  fs.py  grep_files.py  limits.py  list_dir.py  patch_parser.py  read_file.py  registry.py  router.py  shell.py
tests/: AGENTS.md  __init__.py  conftest.py  test_apply_patch_cleanup.py  test_apply_patch_rename_binary.py  test_auth.py  test_cli.py  test_cli_debug_logging.py  test_config.py  test_exec_pty_cleanup.py  test_logging.py  test_logging_setup.py  test_openai_client_client.py  test_openai_client_parsing.py  test_openai_client_parsing_branches.py  test_openai_client_parsing_coverage.py  test_openai_client_parsing_errors.py  test_openai_client_parsing_extra.py  test_openai_client_parsing_more.py  test_openai_client_transport.py  test_openai_client_transport_coverage.py  test_openai_client_transport_errors.py  test_openai_client_transport_extra.py  test_openai_client_types.py  test_paths.py  test_repl.py  test_sessions.py  test_shutdown.py  test_tool_schemas_all.py  test_tools_apply_patch.py  test_tools_apply_patch_more.py  test_tools_apply_patch_trailing.py  test_tools_approval.py  test_tools_base.py  test_tools_end_to_end.py  test_tools_exec_pty.py  test_tools_fs.py  test_tools_grep_files.py  test_tools_limits.py  test_tools_list_dir.py  (+10 more)
