[build-system]
requires = ["poetry-core>=1.8.1"]
build-backend = "poetry.core.masonry.api"

[project]
name = "lincona"
version = "0.1.0"
description = "Linux-only interactive coding agent CLI"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "textual",
    "httpx>=0.27,<0.28",
    "pydantic>=2,<3",
    "typing-extensions>=4.7,<5",
]

[project.scripts]
lincona = "lincona.cli:main"

[tool.poetry]
# Keep package include layout for Poetry's build backend
packages = [{ include = "lincona", from = "src" }]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 120
combine_as_imports = true

[tool.ruff]
line-length = 120
target-version = "py311"
fix = true

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = []

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
disallow_any_unimported = true
disallow_any_generics = true
no_implicit_optional = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
strict_equality = true
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_any_unimported = false
disallow_any_generics = false
no_implicit_optional = false
check_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q --cov=src --cov-branch --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true

[tool.poetry.group.dev.dependencies]
black = ">=24,<25"
ruff = ">=0.6,<0.7"
isort = ">=5.13,<6"
mypy = ">=1.10,<2"
pytest = ">=7.4,<9"
pytest-cov = ">=4,<6"
pytest-asyncio = ">=0.23,<0.24"
freezegun = ">=1.4,<2"
